// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should render 1`] = `
<Touchable
  dataAttr={
    Object {
      "data-e2e-id": "productCard",
    }
  }
  href="__URL__"
  productHover={true}
  width="100%"
>
  <Card
    fullHeight={true}
  >
    <Box
      padding="s12"
      width="100%"
    >
      <Box
        height="120px"
        marginRight="s12"
        minHeight="120px"
      >
        <Image
          alt="product photo"
          src="__IMAGE_URL__"
          width="100%"
        />
      </Box>
      <Box
        flexDirection="column"
        width="100%"
      >
        <Box
          alignItems="center"
          flexGrow="gr1"
        >
          <Text>
            <H3>
              __TITLE__
            </H3>
          </Text>
        </Box>
        <Divider />
        <Box
          justifyContent="spaceBetween"
          marginTop="s8"
        >
          <Image
            alt="channel"
            src="https://tv8.md/wp-content/uploads/2020/07/logo-tv8-new-2.png"
            width="30px"
          />
          <Text
            color="BORDER_DARK"
            fontSize="fs16"
            fontWeight="fw700"
          >
            9:00
          </Text>
        </Box>
      </Box>
    </Box>
  </Card>
</Touchable>
`;

exports[`ProductCard should render when no image url 1`] = `
<Touchable
  dataAttr={
    Object {
      "data-e2e-id": "productCard",
    }
  }
  href="__URL__"
  productHover={true}
  width="100%"
>
  <Card
    fullHeight={true}
  >
    <Box
      padding="s12"
      width="100%"
    >
      <Box
        height="120px"
        marginRight="s12"
        minHeight="120px"
      >
        <Box
          alignSelf="center"
        >
          <Text
            color="BORDER_GRAY"
            fontSize="fs24"
            fontWeight="fw700"
          >
            No photo
          </Text>
        </Box>
      </Box>
      <Box
        flexDirection="column"
        width="100%"
      >
        <Box
          alignItems="center"
          flexGrow="gr1"
        >
          <Text>
            <H3>
              __TITLE__
            </H3>
          </Text>
        </Box>
        <Divider />
        <Box
          justifyContent="spaceBetween"
          marginTop="s8"
        >
          <Image
            alt="channel"
            src="https://tv8.md/wp-content/uploads/2020/07/logo-tv8-new-2.png"
            width="30px"
          />
          <Text
            color="BORDER_DARK"
            fontSize="fs16"
            fontWeight="fw700"
          >
            9:00
          </Text>
        </Box>
      </Box>
    </Box>
  </Card>
</Touchable>
`;
